# SlopIt

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  PLAN.md  README  README.md  TODO  fly.toml  qlty-security.sarif
.github/workflows/: ci.yml  codeql.yml  deploy-frontend.yml  deploy.yml
.qlty/: logs  out  plugin_cachedir  qlty.toml  results
.qlty/configs/: eslint.config.js
backend/: .clerk-config.json  .clerk-schema.json  .dockerignore  .env.example  Dockerfile  PLAN.md  README.md  fly.toml  pyproject.toml
backend/docs/: ALGORITHM.md  API.md  ARCHITECTURE.md  BUGFIX_SESSION.md  DEPLOY.md  FRONTEND_GUIDE.md
backend/scripts/: fly-set-clerk.ps1  fly-set-db.ps1  fly-set-telegram.ps1
backend/src/slopit/apps/: __init__.py
backend/src/slopit/apps/accounts/: __init__.py  adapter.py  admin.py  auth_views.py  avatar.py  clerk_auth.py  clerk_claims.py  models.py  passphrase_views.py  password_auth.py  password_serializers.py  profile_karma.py  safe_http.py  serializers.py  signals.py  telegram_auth.py  telegram_oauth.py  user_display.py  views.py
backend/src/slopit/apps/accounts/management/commands/: runbot.py  seed.py  sync_social_apps.py
backend/src/slopit/apps/accounts/migrations/: 0001_initial.py  0002_social_avatar_url.py  0003_user_clerk_id.py  0004_user_telegram_id.py  0005_user_auth_method.py  0006_fix_clerk_id_usernames.py  0007_add_yandex_auth_method.py  0007_profile_display_name.py  0008_merge_accounts_0007_heads.py
backend/src/slopit/apps/api/: __init__.py  apps.py  exceptions.py  pagination.py  permissions.py  urls.py
backend/src/slopit/apps/bot/: __init__.py  apps.py  config.py  handlers.py  server.py  services.py
backend/src/slopit/apps/comments/: __init__.py  admin.py  models.py  serializers.py  views.py
backend/src/slopit/apps/comments/migrations/: 0001_initial.py
backend/src/slopit/apps/feed/: __init__.py  admin.py  apps.py  jobs.py  models.py  serializers.py  simhash.py  views.py
backend/src/slopit/apps/feed/management/commands/: rebuild_feed_pool.py
backend/src/slopit/apps/feed/migrations/: 0001_initial.py
backend/src/slopit/apps/feed/services/: __init__.py  common.py  level1_pool.py  level2_intake.py  level3_personal.py
backend/src/slopit/apps/posts/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  views.py
backend/src/slopit/apps/posts/management/commands/: seed_frogger_post.py
backend/src/slopit/apps/posts/migrations/: 0001_initial.py  0002_fix_empty_slugs.py  0003_post_template_data_pollvote.py  0004_post_viewcount_bookmark.py  0005_postreport.py  0006_toxicity_postview.py  0007_media_mime_type_blank.py
backend/src/slopit/apps/reactions/: __init__.py  admin.py  apps.py  models.py  serializers.py
backend/src/slopit/apps/reactions/migrations/: 0001_initial.py
backend/src/slopit/config/: asgi.py  smoke_tests.py  urls.py  wsgi.py
backend/src/slopit/config/settings/: base.py  dev.py  prod.py
backend/supabase/.temp/: pooler-url  project-ref
backend/tests/: __init__.py  test_admin_stage6.py  test_api_stage4.py  test_auth_playwright.py  test_auth_stage5.py  test_clerk_sync.py  test_deploy_stage7.py  test_feed_algorithm.py  test_media_upload.py  test_oauth_stage3.py  test_skeleton.py
docs/: API.md  ARCHITECTURE.md  FRONTEND_GUIDE.md
frontend/: .clerk-oauth-patch.json  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  babel.config.cjs  fly.toml  index.html  jest.config.cjs  nginx.conf  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: home.spec.ts  landing.spec.ts  mock-data.ts  post-page.spec.ts  profile.spec.ts  protected-routes.spec.ts  username-display.spec.ts  (+1 more)
scripts/: qlty-check.ps1
slopit-telegram-oidc/: BACKEND_CHANGES.md
telegram-oidc-proxy/: Dockerfile  fly.toml  package.json
tests/: test_admin_stage6.py
(+176 files in other folders)
